Basic layout of the first screen

--- a/index.html
+++ b/index.html
@@ -5,14 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
-    <!--Estilos-->
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" /> 
-    <!--Fontes-->
+    <link rel="stylesheet" href="criar-quiz.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   </head>
   <body>
+      <header>
+          <h1>BuzzQuizz</h1>
+      </header>
+      <div class="main-content">
+        <div class = "first-screen">
+          <div class= "space-added">
+          <div class="upper-box">
+            <div class="without-quizzes">
+              <p class="no-quizz"> Você não criou nenhum quizz ainda :( </p>
+            </div>  
+            <button class= "creation-button" onclick="CreateQuizz()" data-identifier="create-quizz">
+              <p class="quizz-creation"> Criar Quizz </p>
+            </button>
+          </div>
+
+          <div class ="all-quizzes">
+            <h2> Todos os Quizzes </h2>
+          </div>
+
+          <div class= "quizzes">
+          </div>
+
+          </div>
+        </div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>  
+      <script src ="js/script.js"></script>
   </body>
 </html>
