--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   </head>
   <body>
-      <header>
+      <header class ="banner">
           <h1>BuzzQuizz</h1>
       </header>
       <div class="main-content">
