--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" /> 
-    <link rel="stylesheet" href="criar-quiz.css"/>
+    <link rel="stylesheet" href="styles/criar-quiz.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
