--- a/tela-2_pagina-de-um-quizz.html
+++ b/tela-2_pagina-de-um-quizz.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset = "UTF-8">
+        <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
+        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
 
         <!--Styles-->
-        <link rel="stylesheet" href="styles/reset.css">
-        <link rel="stylesheet" href="styles/tela-2_pagina-de-um-quizz.css">
+        <link rel = "stylesheet" href = "styles/reset.css">
+        <link rel = "stylesheet" href = "styles/tela-2_pagina-de-um-quizz.css">
 
         <!--Fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link rel = "preconnect" href = "https://fonts.googleapis.com">
+        <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
+        <link href = "https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel = "stylesheet">
 
         <title>Página de um Quizz</title>
     </head>
@@ -24,12 +24,16 @@
         </header>
 
         <main>
-            <div class="quizz-title-box"></div>
-            <section class="question-container"></section>
+            <div class = "quizz-title-box"></div>
+            <section class = "question-container"></section>
+            <section class = "quizz-results-container">
+                <div class = "score"></div>
+                <div class = "level-discription"></div>
+            </section>
         </main>
     </body>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>  
-      <script src ="js/tela-2_pagina-de-um-quizz.js"></script>
+    <script src ="js/tela-2_pagina-de-um-quizz.js"></script>
 
 </html>
