Adjustments in order to make the function "backToHomepage" work

--- a/tela-2_pagina-de-um-quizz.html
+++ b/tela-2_pagina-de-um-quizz.html
@@ -24,12 +24,14 @@
         </header>
 
         <main>
-            <div class = "quizz-title-box"></div>
-            <section class = "question-container"></section>
-            <section class = "quizz-results-container">
-                <div class = "score"></div>
-                <div class = "level-discription"></div>
-            </section>
+            <div class = "quizz-screen">
+                <div class = "quizz-title-box"></div>
+                <section class = "question-container"></section>
+                <section class = "quizz-results-container">
+                    <div class = "score"></div>
+                    <div class = "level-discription"></div>
+                </section>
+            </div>
         </main>
     </body>
 
