commit for pulling changes only

--- a/tela-2_pagina-de-um-quizz.html
+++ b/tela-2_pagina-de-um-quizz.html
@@ -28,8 +28,17 @@
             <section class = "question-container"></section>
             <section class = "quizz-results-container">
                 <div class = "score"></div>
-                <div class = "level-discription"></div>
+                <div class = "level-discription">
+                    <figure class = "level-image"></figure>
+                    <p class = "level-text"></p>
+                </div>
             </section>
+            <section class = "restart-quizz">
+                <button class = "restart-quizz-button">
+                    <span>Reiniciar Quizz</span>
+                </button>
+            </section>
+            <button class = "return-to-home-page">Voltar pra home</button>
         </main>
     </body>
 
