Adjusting minor style changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
           </div>
         </div>
-      </div>
+      
 
       <div class="create-quizz">
         <div class="create-screen1 hidden">
@@ -75,6 +75,11 @@
         </div>
       </div>
 
+      <div class="loading-screen">
+        <img src="assets/loading.gif" />
+        <p class = "loading">Carregando</p>
+      </div>
+    </div>
 
 
 
