--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="input-questions">
 
             </div>           
-            <button type="submit" onclick="checkFields()"><p>Prosseguir pra criar níveis</p></button>
+            <button type="submit" onclick="form2DataValidation()"><p>Prosseguir pra criar níveis</p></button>
         </div>
 
         <div class="create-screen3 hidden">
@@ -67,11 +67,16 @@
 
 
             </div>
-            <button type="submit"><p>Finalizar Quizz</p></button>
+            <button type="submit" onclick="form3DataValidation()"><p>Finalizar Quizz</p></button>
         </div>
 
         <div class="create-screen4 hidden">
-        
+          <h1>Seu quizz está pronto!</h1>
+          <div class="all-done-quizz quizz-card">
+
+          </div>
+          <button onclick="playCreatedQuizz()" class="play-quizz"><p>Acessar quizz</p></button>
+          <button onclick="returnHome()" class="return-home"><p>Voltar pra home</p></button>
         </div>
       </div>
 
