Final changes aiming a better functioning

--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
 
           </div>
         </div>
+
+        
+        <div class = "quizz-screen hidden" >
+          <div class = "quizz-title-box"></div>
+          <section class = "question-container"></section>
+          <section class = "quizz-results-container">
+              <div class = "score"></div>
+              <div class = "level-discription">
+                  <figure class = "level-image"></figure>
+                  <p class = "level-text"></p>
+              </div>
+          </section>
+          <section class = "restart-quizz">
+              <button class = "restart-quizz-button">
+                  <span>Reiniciar Quizz</span>
+              </button>
+          </section>
+          <button class = "return-to-home-page" onclick="returnHome()">Voltar pra home</button>
+      </div>
       
 
       <div class="create-quizz">
@@ -90,7 +109,8 @@
 
 
       <!--Script-->
-      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>  
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
+      <script src= "js/tela-2_pagina-de-um-quizz.js"></script> 
       <script src="js/script.js"></script>
       <script src="js/criar-quiz.js"></script>
       <!--Icons-->
